Refactor email notification route setup and update marathon name - Updated the marathon name in the ticket template and refactored email notification route setup for clarity and consistency. - No issue references.

--- a/server/routes/template/ticket.hbs
+++ b/server/routes/template/ticket.hbs
@@ -74,7 +74,7 @@
       </div>
 
       <div class="footer">
-        <p>Thank you for being part of the [Marathon Name] community. We look forward to seeing you on race day!</p>
+        <p>Thank you for being part of the Pala Marathon community. We look forward to seeing you on race day!</p>
         <p>Follow us on social media for updates and more: [Facebook, Instagram, Twitter]</p>
       </div>
     </div>
