Remove ticket download section from ticket template

--- a/server/routes/template/ticket.hbs
+++ b/server/routes/template/ticket.hbs
@@ -66,11 +66,11 @@
           <img src="cid:{{qrCodeCid}}" alt="QR Code for Check-In" style="width:150px; height:150px; border:1px solid #ddd;" />
         </div>
 
-        <div class="section">
+        {{!-- <div class="section">
           <h2>Download Your Ticket</h2>
           <p>Click the link below to download your ticket as a PDF:</p>
           <a href="{{ticketPdfUrl}}" class="btn" download>Download Ticket PDF</a>
-        </div>
+        </div> --}}
       </div>
 
       <div class="footer">
