Format amount paid in ticket template to include currency symbol

--- a/server/routes/template/ticket.hbs
+++ b/server/routes/template/ticket.hbs
@@ -43,7 +43,7 @@
             </tr>
             <tr>
               <th>Amount Paid</th>
-              <td class="amount">{{amountPaid}}</td>
+              <td class="amount">₹ {{amountPaid}}</td>
             </tr>
             <tr>
               <th>Payment Type</th>
